@@ -1,0 +1,12 @@
+<form action="/messages/{{ message.id }}/like" method="POST" style="z-index:999">
+    {{ g.csrf_form.hidden_tag() }}
+    {% if message in g.user.liked_messages %}
+    <button>
+        <i class="bi bi-star-fill"></i>
+    </button>
+    {% else %}
+    <button>
+        <i class="bi bi-star"></i>
+    </button>
+    {% endif %}
+</form>
