@@ -46,32 +46,18 @@
 
     <div class="col-lg-6 col-md-8 col-sm-12">
       <ul class="list-group" id="messages">
-        {% for msg in messages %}
+        {% for message in messages %}
           <li class="list-group-item">
-            <a href="/messages/{{ msg.id }}" class="message-link"/>
-            <a href="/users/{{ msg.user.id }}">
-              <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
+            <a href="/messages/{{ message.id }}" class="message-link"/>
+            <a href="/users/{{ message.user.id }}">
+              <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
             </a>
             <div class="message-area">
-              <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
-              <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
-              <p>{{ msg.text }}</p>
+              <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
+              <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+              <p>{{ message.text }}</p>
             </div>
-            <form
-              action="/messages/{{ msg.id }}/like"
-              method="POST"
-              style="z-index:1">
-              {{ g.csrf_form.hidden_tag() }}
-              {% if msg in g.user.liked_messages %}
-              <button>
-                  <i class="bi bi-star-fill"></i>
-              </button>
-              {% else %}
-              <button>
-                  <i class="bi bi-star"></i>
-              </button>
-              {% endif %}
-            </form>
+            {% include "_like-form.html"  %}
           </li>
         {% endfor %}
       </ul>
